fix: actionsとpagesの変化を少し追加

--- a/blog/001117A.mdx
+++ b/blog/001117A.mdx
@@ -136,3 +136,9 @@ https://cdn.jsdelivr.net/gh/username/repo@main/foo.webp
 
 そして github らしく履歴管理することにしました。
 どーなることやら。
+
+actions と pages の仕様が微妙に変化しててあちこちデバッグしながらなんとか deploy 完了
+（artifacts も加わってた）。
+この仕組みって誰得なんだろう？
+
+ソースが github にあって、それが展開された成果だよってことが履歴に残ることが価値、ということなのかなあ。
