add: actions対応を少し追加

--- a/blog/001117A.mdx
+++ b/blog/001117A.mdx
@@ -137,8 +137,21 @@ https://cdn.jsdelivr.net/gh/username/repo@main/foo.webp
 そして github らしく履歴管理することにしました。
 どーなることやら。
 
+### actions で deploy
+
 actions と pages の仕様が微妙に変化しててあちこちデバッグしながらなんとか deploy 完了
 （artifacts も加わってた）。
 この仕組みって誰得なんだろう？
 
 ソースが github にあって、それが展開された成果だよってことが履歴に残ることが価値、ということなのかなあ。
+
+てっきり git リポジトリを Web サイトにマッピングしてるのかと思ったらそうじゃなくて、中継で使ってるだけなんですね。
+割り切ってる、多分これが最後の形なんだろうなあって思います。
+
+調べたら artifacts deploy が今の標準でした。
+透明性を評価基準としての「平らな地続きの選択肢」ではなく「壁で隔てた選択肢」にすることにしたんだね。
+かつての弱点を利用するなんて、本質を見抜く洞察と学習することの重要性が表れてる。
+こわー。
+
+gh-pages ブランチで公開する方式は、いずれ削除されるか有料化するのかな。
+
